fix: fix bug with lang on mobile version

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -478,14 +478,17 @@ a:hover {
   }
 
   .languages {
+    display: flex;
+    align-items: center;
     padding-right: 75px;
   }
 
   .languages #ru {
-    padding-left: 16px;
+    padding-left: 20px;
   }
 
   .languages span {
+    padding-left: 11px;
     font-size: var(--font1);
     line-height: 50px;
   }
